doc: general guidance for AI tools